Fixed wording for most rules

--- a/content/klc/F1.1.adoc
+++ b/content/klc/F1.1.adoc
@@ -1,22 +1,22 @@
 +++
-brief = "Footprint libraries should be categorized by function"
+brief = "Footprint libraries are categorized by function"
 +++
 
-Footprints should be grouped into libraries (directories with `.pretty` extension) based on their primary function. As an extension of this, footprint libraries should be named based on this same functionality.
+Footprints are grouped into libraries (directories with `.pretty` extension) based on their primary function. As an extension of this, footprint libraries should be named based on this same functionality.
 
-Library names should be defined based on the priority list below, with each element separated by the underscore (`_`) character:
+Library names must be defined based on the priority list below, with each element separated by the underscore (`_`) character:
 
 1. Function (e.g. `Conn`, `Capacitor`)
 1. Sub-function (e.g. `HDMI`, `USB`)
 1. Tertiary qualifier (e.g. `RightAngle`, `SMD`)
 1. Manufacturer name (e.g. `Texas`, `Microchip`)
 1. Footprint series name (e.g. `MicroFit`)
-1. Extra library descriptors (e.g. `deprecated`)
+1. Extra library descriptors (e.g. `Deprecated`)
 
 _Note: Some of the elements listed above may be omitted if not required._
 
 Example footprint library names:
 
-* `conn_USB_SMD` - Surface mount USB connectors
-* `conn_rect_MOLEX_MicroFit` - Molex MicroFit series rectangular connectors
-* `capacitor_tantalum_SMD` - Surface mount Tantalum capacitors
+* `Conn_USB_SMD` - Surface mount USB connectors
+* `Conn_Rect_MOLEX_MicroFit` - Molex MicroFit series rectangular connectors
+* `Capacitor_Tantalum_SMD` - Surface mount Tantalum capacitors
