--- a/content/klc/G1.7.adoc
+++ b/content/klc/G1.7.adoc
@@ -2,7 +2,7 @@
 brief = "Library files use Unix style line endings"
 +++
 
-Library files should always be commited to GitHub using Unix-style line endings. This means that lines are terminated using the **LF** (line feed) character, rather than the DOS style **CR+LF** line endings.
+Library files must always be commited to GitHub using Unix-style line endings. This means that lines are terminated using the **LF** (line feed) character, rather than the DOS style **CR+LF** line endings.
 
 KiCad library files must be compatible across multiple operating systems, and users should be able to contribute without generating unnecessary _noise_ in the files by constantly changing line endings.
 
@@ -13,3 +13,5 @@ An example of a simple .gitattributes file which ensures footprint files have co
 ```
 *.kicad_mod text=auto
 ```
+
+_Note: The KiCad library repositories should already have the correct .gitattributes file in place to achive this_
