--- a/content/klc/S7.2.adoc
+++ b/content/klc/S7.2.adoc
@@ -1,14 +1,16 @@
 +++
-brief = "Graphical Symbols"
+brief = "Graphical symbols"
 +++
 
 Graphical symbols are used only to annotate schematics and do *not* correspond to a footprint on the PCB.
 
 
 1. Reference Designator must be set to `#SYM` and must be *invisible*
+1. Symbol name must be set to _invisible_
 1. Graphical symbols must not contain any pins
 1. No pins or footprint association
+1. No footprint filters
 
-Example:
+*Example:*
 
 {{< klcimg src="S7.2_a" title="Example graphical symbol" >}}
