--- a/content/klc/F3.3.adoc
+++ b/content/klc/F3.3.adoc
@@ -6,4 +6,6 @@ Footprints that contain multiple pads or conductive elements that are *physicall
 
 1. Multiple pads that are physically connected must share the same number
 1. Thermal vias (if present) must share the same number as the thermal pad
-1.
+
+
+{{< klcimg src="F3.3a" title="Connected copper areas must have same pad number" >}}
