--- a/content/klc/G1.1.adoc
+++ b/content/klc/G1.1.adoc
@@ -11,4 +11,4 @@ Filenames, symbol names, footprint names and model names must contain only valid
 
 This character set ensures that symbols will be compatible with all filesytems, and will not cause any issues due to character rendering.
 
-Further, filenames and symbol names should **not use the space character**. This can cause issues with string escaping and is best avoided.
+Further, filenames and symbol names must **not use the space character**. This can cause issues with string escaping and is best avoided.
