--- a/content/klc/S6.2.adoc
+++ b/content/klc/S6.2.adoc
@@ -1,5 +1,5 @@
 +++
-brief = "Component fields"
+brief = "Component fields must be filled appropriately"
 +++
 
 1. *Reference* field is selected appropriately for the symbol and is _visible_
