--- a/content/klc/S6.3.adoc
+++ b/content/klc/S6.3.adoc
@@ -1,5 +1,5 @@
 +++
-brief = "Component metadata"
+brief = "Component metadata is added to symbol (and all aliases)"
 +++
 
 Component metadata is contained in the `<libname>.dcm` file, and must be filled in for each unique symbol (and each alias for the symbol).
@@ -8,6 +8,6 @@ Component metadata is contained in the `<libname>.dcm` file, and must be filled 
 .. For symbols with a default footprint, the simplified footprint name should be appended to the description e.g. `SOIC-8`
 .. Part name should not be duplicated in the description field
 1. **Keywords** field contains space-separated keyword values. These values are used to assist in part searching and should not include filler words
-1. **Documentation File Name** field contains URL to part documentation if applicaple, or is otherwise left blank
+1. **Documentation File Name** field contains URL to part documentation if applicable, or is otherwise left blank
 
 {{< klcimg src="S6.3a" title="Component metadata is edited in the symbol properties dialog" >}}
