--- a/content/klc/S3.3.adoc
+++ b/content/klc/S3.3.adoc
@@ -2,8 +2,8 @@
 brief = "Symbol outline and fill requirements"
 +++
 
-1. Symbol body has a line width of `10mil` (`0.254mm`)
-1. Black-box symbols (e.g. ICs with hidden functionality) must be filled with background color
+1. Symbol body must have a line width of `10mil` (`0.254mm`)
+1. Black-box symbols (e.g. ICs with hidden functionality) should be filled with background color
 1. Simple components (e.g. discrete components or those with a _distinctive shape_) should not be filled with background color
 
 *Fill background*
