--- a/content/klc/S3.1.adoc
+++ b/content/klc/S3.1.adoc
@@ -1,8 +1,8 @@
 +++
-brief = "Symbol origin is centered on the middle of the symbol"
+brief = "Origin is centered on the middle of the symbol"
 +++
 
-The symbol must be centered around the origin (`0`, `0`) in the symbol editor.
+For symmetrical symbols, the symbol must be centered around the origin (`0`, `0`) in the symbol editor.
 
 *Exception:*
 
