--- a/content/klc/S4.3.adoc
+++ b/content/klc/S4.3.adoc
@@ -1,5 +1,5 @@
 +++
-brief = "Pin stacking"
+brief = "Rules for pin stacking"
 +++
 
 Many symbols have corresponding footprints where multiple physical pins are conneceted to a single logical net. It is desirable that in such cases the user only has to connect a single pin in the schematic, and it will automatically route to all the physical pins on the PCB.
