--- a/content/klc/F2.2.adoc
+++ b/content/klc/F2.2.adoc
@@ -6,6 +6,12 @@ A footprint name has to convey a lot of information to clearly specify the purpo
 
 Not all footprints will require the use of these abbreviations - they are provided as a method of standardising the manner in which footprint parameters are called out when encountered.
 
+For IC packages, the first dimension specified is always the size of the package body, in the following format:
+
+`XxY{yZ}` where `Z` dimension is optional.
+
+e.g. `SOIC-8_3.2x5.7_P1.27mm`
+
 Refer to the table below for accepted prefix abbreviations.
 
 {{< fp_prefix >}}
@@ -14,5 +20,5 @@ If the parameter is not found in the table above, the name of the parameter shou
 
 *Examples:*
 
-* `LQFP-32_B4x4x1.1_P1.65` - LQFP package, 32 pins, 4x4mm body, 1.1mm height, 1.65mm pitch
+* `LQFP-32_4x4x1.1_P1.65` - LQFP package, 32 pins, 4x4mm body, 1.1mm height, 1.65mm pitch
 * `CP_Radial_D4.5_P2.5_H10` - Radial capacitor, 4.5mm diameter, 2.5mm pitch, 10mm height
