--- a/content/klc/F4.2.adoc
+++ b/content/klc/F4.2.adoc
@@ -14,7 +14,9 @@ The following elements must be provided on the fabrication layer(s)
 1. Simplified component outline must be provided on `F.Fab` layer
 .. Outline uses line width between {`0.10mm` and `0.15mm`} (recommended `0.10mm`)
 .. Outline should be simplified and not display complex features
-1. Location of pin-1 is drawn
+1. Footprint polarisation / location of pin-1 is drawn
+.. For IC packages, bevel is drawn at corner next to pin-1
+.. Bevel should be `1mm` or `25% of package size` (whichever is smaller)
 1. Component value (footprint name) must be displayed on the `F.Fab` layer
 .. Text size = `1.0mm`
 .. Text thickness = `0.15mm`
@@ -27,10 +29,4 @@ The following elements must be provided on the fabrication layer(s)
 .. Allowable text size = {`0.1mm` to `2.0mm`}
 .. Allowable text thickness = {`0.01mm` to `0.20mm`} (should be approximately `15%` of text size, with allowances for variation for aesthetic reasons)
 
-```
-TODO: Example images
-
-- Orienting RefDes to match component alignment
-- Scaling RefDes to match component size
-- Location of FP name (inside FP if enough room, else outside)
-```
+{{< klcimg src="F4.2a" title="Fabrication layer" >}}
