--- a/content/libraries/pull_request.adoc
+++ b/content/libraries/pull_request.adoc
@@ -15,3 +15,9 @@ The KiCad libraries are hosted on https://github.com/kicad[GitHub] - users can s
 1. Create a link:https://help.github.com/articles/using-pull-requests[**pull request**] (PR) to merge your branch into the KiCad libraries. Include links to reference documents (e.g. datasheets) in the comments, in addition to a description of the changes you have made.
 1. A librarian will review the changes - discussion and further work may be required.
 1. If further changes are needed, *do not create a new branch*. Simply make any further changes to the same branch, and push these changes upstream. They will be automatically added to the PR.
+
+It is very helpful to the library team if you can include a description of your contribution and also a screenshot of your contributed file(s) (symbols / footprints / models).
+
+**Example:**
+
+{{< figure src="/img/klc/adding_screenshot.png" >}}
