--- a/content/klc/S4.6.adoc
+++ b/content/klc/S4.6.adoc
@@ -1,3 +1,12 @@
 +++
 brief = "Hidden pins"
 +++
+
+Hidden connection pins are generally not allowed for schematic symbols. Any connection point must be visible, otherwise unexpected net connections can occur.
+
+Hidden power pins are also not allowed.
+
+**Exceptions**
+
+1. Unused NC pins can be set to invisible. In this case the electrical type must be `Not Connected`
+1. Invisible pins may be used in a pin stack to allow one-to-many connections. Refer to the requirements on pin stacking
